<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/display_margin"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_find_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/find_opponent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/show_statistics"
        app:layout_constraintEnd_toEndOf="@id/btn_find_opponent"
        app:layout_constraintStart_toStartOf="@id/btn_find_opponent"
        app:layout_constraintTop_toBottomOf="@id/btn_find_opponent" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@id/btn_find_opponent"
        app:layout_constraintStart_toStartOf="@id/btn_find_opponent"
        app:layout_constraintTop_toBottomOf="@id/btn_statistics" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@id/btn_find_opponent"
        app:layout_constraintStart_toStartOf="@id/btn_find_opponent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>